force-app/main/default/objects/Opportunity/fields/My_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>My_Formula_Field__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Formula Field</label>
    <type>Text</type>
</CustomField>