force-app/main/default/objects/Opportunity/fields/Test_Package_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Package_Field__c</fullName>
    <formula>IF( ISBLANK(TEXT(Account.SLA__c)),Text(Account.SLA__c), Text(Account.SLA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Package Field</label>
    <type>Text</type>
</CustomField>